k8s/apiserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiserver-svc
spec:
  selector:
    app: apiserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
